# utils

./: CMakeLists.txt  README.md
cmake/: ConfigureVS.cmake  DefineForFiles.cmake
filesystem/: extra.cpp  extra.hpp  filesystem.cpp  filesystem.hpp  mapped_file.hpp  mappedfile.c  mappedfile.h
filesystem/platform/linux/: filesystem.cpp
filesystem/platform/windows/: filesystem.cpp
iostream/: datetime.cpp  datetime.hpp  ostream_range.hpp
log/: log.cpp  log.hpp
meta/: apply.hpp  crtp_chain.hpp  for_each_argument.hpp  static_assert_workaround.hpp
numbers/: bcd.cpp  bcd.hpp  int.hpp
process/: cli_arguments.cpp  cli_arguments.hpp  process.cpp  process.hpp
process/platform/linux/: process.cpp  process.hpp
process/platform/windows/: process.cpp  process.hpp
queue/: async_queue.hpp
reflection/: CMakeLists.txt  execute.hpp
reflection/json/: iterator_stream.hpp  rj_reading_visitor.cpp  rj_reading_visitor.hpp  rj_writing_visitor.cpp  rj_writing_visitor.hpp  std_stream.hpp
reflection/lua/: execute.cpp  execute.hpp  helper.cpp  helper.hpp  reading_visitor.cpp  reading_visitor.hpp  writing_visitor.cpp  writing_visitor.hpp
reflection/meta/: reading_visitor.hpp  templater.hpp  templater_object.hpp  templater_read_values.hpp  templater_spec_basic.hpp  templater_spec_maps.hpp  templater_spec_memory.hpp  templater_spec_vector.hpp  templater_write_values.hpp  terminator.hpp  writing_visitor.hpp
string/: build.hpp  narrow.hpp  sha1sum.cpp  sha1sum.hpp  size_for_output.hpp  size_for_output_containers.hpp  string.cpp  string.hpp  string_streambuf.cpp  string_streambuf.hpp
threading/: block_queue.hpp  block_queue_lock.hpp  sync_op.cpp  sync_op.hpp  sync_op_impl.cpp  sync_op_impl.hpp  working_token.hpp
time/: time.hpp  time_win.cpp
